Fixed BUG#1357 MySQL too eagerly cleanups temporary files for LOAD DATA (SQL_LOAD-...)

sql/log_event.cc:
  Now cleaning up only our files during processing of Start_log_event